- API/APP/DB: got rid of active field for User/Source - DB: switched from Conn to Pool for concurrency support - DB: no need for reconnect routine
